added class weights and tried to predict test img

--- a/image_classification_model.ipynb
+++ b/image_classification_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,27 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(128, 128, 3)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "input_shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +48,7 @@
     "\n",
     "model.compile(loss = 'binary_crossentropy',\n",
     "              optimizer = 'rmsprop',\n",
-    "              metrics = ['accuracy'])"
+    "              metrics = ['accuracy']) ## try accuracy for now, can change later"
    ]
   },
   {
@@ -83,31 +63,31 @@
       "Found 4479 images belonging to 4 classes.\n",
       "Found 642 images belonging to 4 classes.\n",
       "Epoch 1/10\n",
-      "279/279 [==============================] - 72s 258ms/step - loss: 0.5667 - accuracy: 0.7500 - val_loss: 0.5627 - val_accuracy: 0.7500\n",
+      "279/279 [==============================] - 44s 148ms/step - loss: 2.3432 - accuracy: 0.7485 - val_loss: 0.5644 - val_accuracy: 0.7500\n",
       "Epoch 2/10\n",
-      "279/279 [==============================] - 76s 271ms/step - loss: 0.5653 - accuracy: 0.7500 - val_loss: 0.5633 - val_accuracy: 0.7500\n",
+      "279/279 [==============================] - 46s 157ms/step - loss: 2.2788 - accuracy: 0.7500 - val_loss: 0.5625 - val_accuracy: 0.7500\n",
       "Epoch 3/10\n",
-      "279/279 [==============================] - 74s 264ms/step - loss: 0.5642 - accuracy: 0.7500 - val_loss: 0.5624 - val_accuracy: 0.7500\n",
+      "279/279 [==============================] - 47s 156ms/step - loss: 2.2533 - accuracy: 0.7500 - val_loss: 0.5625 - val_accuracy: 0.7500\n",
       "Epoch 4/10\n",
-      "279/279 [==============================] - 69s 248ms/step - loss: 0.5636 - accuracy: 0.7500 - val_loss: 0.5625 - val_accuracy: 0.7500\n",
+      "279/279 [==============================] - 51s 174ms/step - loss: 2.2655 - accuracy: 0.7500 - val_loss: 0.5624 - val_accuracy: 0.7500\n",
       "Epoch 5/10\n",
-      "279/279 [==============================] - 70s 253ms/step - loss: 0.5630 - accuracy: 0.7500 - val_loss: 0.5623 - val_accuracy: 0.7500\n",
+      "279/279 [==============================] - 51s 171ms/step - loss: 2.2618 - accuracy: 0.7500 - val_loss: 0.5624 - val_accuracy: 0.7500\n",
       "Epoch 6/10\n",
-      "279/279 [==============================] - 74s 265ms/step - loss: 0.5626 - accuracy: 0.7500 - val_loss: 0.5623 - val_accuracy: 0.7500\n",
+      "279/279 [==============================] - 55s 185ms/step - loss: 2.2595 - accuracy: 0.7500 - val_loss: 0.5624 - val_accuracy: 0.7500\n",
       "Epoch 7/10\n",
-      "279/279 [==============================] - 61s 216ms/step - loss: 0.5624 - accuracy: 0.7500 - val_loss: 0.5624 - val_accuracy: 0.7500\n",
+      "279/279 [==============================] - 61s 203ms/step - loss: 2.2566 - accuracy: 0.7500 - val_loss: 0.5624 - val_accuracy: 0.7500\n",
       "Epoch 8/10\n",
-      "279/279 [==============================] - 68s 245ms/step - loss: 0.5623 - accuracy: 0.7500 - val_loss: 0.5623 - val_accuracy: 0.7500\n",
+      "279/279 [==============================] - 63s 205ms/step - loss: 2.2443 - accuracy: 0.7500 - val_loss: 0.5625 - val_accuracy: 0.7500\n",
       "Epoch 9/10\n",
-      "279/279 [==============================] - 79s 284ms/step - loss: 0.5623 - accuracy: 0.7500 - val_loss: 0.5623 - val_accuracy: 0.7500\n",
+      "279/279 [==============================] - 56s 189ms/step - loss: 2.2538 - accuracy: 0.7500 - val_loss: 0.5623 - val_accuracy: 0.7500\n",
       "Epoch 10/10\n",
-      "279/279 [==============================] - 70s 250ms/step - loss: 0.5623 - accuracy: 0.7500 - val_loss: 0.5623 - val_accuracy: 0.7500\n"
+      "279/279 [==============================] - 54s 185ms/step - loss: 2.2528 - accuracy: 0.7500 - val_loss: 0.5625 - val_accuracy: 0.7500\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1ff238c8d68>"
+       "<keras.callbacks.History at 0x1d18c8ebb00>"
       ]
      },
      "execution_count": 9,
@@ -116,7 +96,10 @@
     }
    ],
    "source": [
-    "datagen = ImageDataGenerator(rescale = 1/255)\n",
+    "## clearly there were some problems with the last iteration of the model since accuracy started at 75% and remained the same...\n",
+    "## this could possibly be a problem with class imbalancing, so let's try using class weights\n",
+    "\n",
+    "datagen = ImageDataGenerator(rescale = 1/255) ## resizing pixels ?\n",
     " \n",
     "train_data = datagen.flow_from_directory(\n",
     "    r'C:\\Users\\lucia\\OneDrive - University of Calgary\\University\\Year 3\\Semester 2\\Bmen 415\\Coursework\\Course Project\\_FINAL DATASETS\\alzheimer mri preprocessed dataset\\train_test_val split\\train',\n",
@@ -135,23 +118,33 @@
     "    steps_per_epoch = 4479 // batch_size,\n",
     "    epochs=epochs,\n",
     "    validation_data = validation_data,\n",
-    "    validation_steps = 642 // batch_size)"
+    "    validation_steps = 642 // batch_size,\n",
+    "    class_weight = {0: 4479/627, 1: 4479/44, 2: 4479/2240, 3: 4479/1568}) ## these class weights are based on the train dataset (total train samples/train samples for class i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save_weights('CNN_model.h5')"
+    "model.save('CNN_model.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.25720322]]\n",
+      "Predicted Class:  0.25720322\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import load_model\n",
     "from keras.preprocessing.image import load_img\n",
@@ -165,13 +158,23 @@
     " \n",
     "model = load_model('CNN_model.h5')\n",
     " \n",
-    "image = load_img(r'', target_size = (128, 128))\n",
-    "img = np.array(image) / 255.0\n",
+    "## let's test one of the mild demented images reserved in the training dataset\n",
+    "image = load_img(r'C:\\Users\\lucia\\OneDrive - University of Calgary\\University\\Year 3\\Semester 2\\Bmen 415\\Coursework\\Course Project\\_FINAL DATASETS\\alzheimer mri preprocessed dataset\\train_test_val split\\test\\Mild_Demented\\mild_55.jpg', target_size = (128, 128))\n",
+    "img = np.array(image) / 255\n",
     "img = img.reshape(1, 128, 128, 3)\n",
     "\n",
     "prediction = model.predict(img)\n",
     "print(prediction)\n",
     "print(\"Predicted Class: \", prediction[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## two issues visible here... accuracy is still at 0.75 constantly (so it is NOT a class imbalance problem?) and the predicted class is a decimal number, not a class..."
    ]
   }
  ],
