--- a/Models/classification models_maria.ipynb
+++ b/Models/classification models_maria.ipynb
@@ -161,6 +161,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NOTE: Many of these models give the error \"DataConversionWarning: A column-vector y was passed when a 1d array was expected\". However, the model still seems to be working with this data so it seems that it automatically converted the data to the correct format. In future refinements of this project, the data format will be changed as requested to make sure of this.\n",
+    "\n",
+    "The convergence warning also indicates that 100 iterations is too low, so the range for max iterations could be increased to possibly 500 or so to get rid of this error."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
