--- a/Models/regression models_maria.ipynb
+++ b/Models/regression models_maria.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,7 @@
     "import lightgbm\n",
     "\n",
     "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import r2_score\n",
     "\n",
     "from sklearn.model_selection import KFold\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -39,7 +40,9 @@
     "    y_test_pred = model.predict(X_test)\n",
     "\n",
     "    print('Training MSE:', mean_squared_error(y_train, y_train_pred))\n",
+    "    print('Training r^2:', r2_score(y_train, y_train_pred))\n",
     "    print('Testing MSE:', mean_squared_error(y_test, y_test_pred))\n",
+    "    print('Testing r^2:', r2_score(y_test, y_test_pred))\n",
     "\n",
     "    fig = plt.figure()\n",
     "    ax1 = fig.add_subplot(111)\n",
