fixed errors + loading data w/ image_dat function

--- a/Models/image_classification_model.ipynb
+++ b/Models/image_classification_model.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.preprocessing.image import ImageDataGenerator\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Conv2D, MaxPooling2D\n",
-    "from keras.layers import Activation, Dropout, Flatten, Dense\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense\n",
+    "from tensorflow.keras.models import Sequential\n",
     "from keras import backend as K\n",
     " \n",
     "img_width, img_height = 128, 128\n",
@@ -22,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +42,7 @@
     "model.add(Dense(64))\n",
     "model.add(Activation('relu'))\n",
     "model.add(Dropout(0.5))\n",
-    "model.add(Dense(1))\n",
+    "model.add(Dense(4)) ## 4 output classes\n",
     "model.add(Activation('sigmoid'))\n",
     "\n",
     "model.compile(loss = 'binary_crossentropy',\n",
@@ -53,78 +52,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 4479 images belonging to 4 classes.\n",
-      "Found 642 images belonging to 4 classes.\n",
+      "Found 4487 files belonging to 4 classes.\n",
+      "Found 642 files belonging to 4 classes.\n",
       "Epoch 1/10\n",
-      "279/279 [==============================] - 44s 148ms/step - loss: 2.3432 - accuracy: 0.7485 - val_loss: 0.5644 - val_accuracy: 0.7500\n",
+      "28/28 [==============================] - 4s 121ms/step - loss: 0.4731 - accuracy: 0.5357 - val_loss: 0.4333 - val_accuracy: 0.5469\n",
       "Epoch 2/10\n",
-      "279/279 [==============================] - 46s 157ms/step - loss: 2.2788 - accuracy: 0.7500 - val_loss: 0.5625 - val_accuracy: 0.7500\n",
+      "28/28 [==============================] - 3s 121ms/step - loss: 0.4623 - accuracy: 0.4799 - val_loss: 0.4294 - val_accuracy: 0.5312\n",
       "Epoch 3/10\n",
-      "279/279 [==============================] - 47s 156ms/step - loss: 2.2533 - accuracy: 0.7500 - val_loss: 0.5625 - val_accuracy: 0.7500\n",
+      "28/28 [==============================] - 3s 124ms/step - loss: 0.4610 - accuracy: 0.5134 - val_loss: 0.4399 - val_accuracy: 0.4688\n",
       "Epoch 4/10\n",
-      "279/279 [==============================] - 51s 174ms/step - loss: 2.2655 - accuracy: 0.7500 - val_loss: 0.5624 - val_accuracy: 0.7500\n",
+      "28/28 [==============================] - 3s 123ms/step - loss: 0.4430 - accuracy: 0.5424 - val_loss: 0.4510 - val_accuracy: 0.5156\n",
       "Epoch 5/10\n",
-      "279/279 [==============================] - 51s 171ms/step - loss: 2.2618 - accuracy: 0.7500 - val_loss: 0.5624 - val_accuracy: 0.7500\n",
+      "28/28 [==============================] - 3s 122ms/step - loss: 0.4694 - accuracy: 0.5312 - val_loss: 0.4412 - val_accuracy: 0.5000\n",
       "Epoch 6/10\n",
-      "279/279 [==============================] - 55s 185ms/step - loss: 2.2595 - accuracy: 0.7500 - val_loss: 0.5624 - val_accuracy: 0.7500\n",
+      "28/28 [==============================] - 3s 124ms/step - loss: 0.4404 - accuracy: 0.5603 - val_loss: 0.4437 - val_accuracy: 0.5000\n",
       "Epoch 7/10\n",
-      "279/279 [==============================] - 61s 203ms/step - loss: 2.2566 - accuracy: 0.7500 - val_loss: 0.5624 - val_accuracy: 0.7500\n",
+      "28/28 [==============================] - 3s 124ms/step - loss: 0.4498 - accuracy: 0.5223 - val_loss: 0.4046 - val_accuracy: 0.5312\n",
       "Epoch 8/10\n",
-      "279/279 [==============================] - 63s 205ms/step - loss: 2.2443 - accuracy: 0.7500 - val_loss: 0.5625 - val_accuracy: 0.7500\n",
+      "28/28 [==============================] - 8s 293ms/step - loss: 0.4462 - accuracy: 0.5379 - val_loss: 0.3794 - val_accuracy: 0.6094\n",
       "Epoch 9/10\n",
-      "279/279 [==============================] - 56s 189ms/step - loss: 2.2538 - accuracy: 0.7500 - val_loss: 0.5623 - val_accuracy: 0.7500\n",
+      "28/28 [==============================] - 4s 133ms/step - loss: 0.4266 - accuracy: 0.5312 - val_loss: 0.4109 - val_accuracy: 0.5781\n",
       "Epoch 10/10\n",
-      "279/279 [==============================] - 54s 185ms/step - loss: 2.2528 - accuracy: 0.7500 - val_loss: 0.5625 - val_accuracy: 0.7500\n"
+      "28/28 [==============================] - 4s 134ms/step - loss: 0.4459 - accuracy: 0.5536 - val_loss: 0.4310 - val_accuracy: 0.4531\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1d18c8ebb00>"
+       "<keras.callbacks.History at 0x1d66c203280>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## clearly there were some problems with the last iteration of the model since accuracy started at 75% and remained the same...\n",
-    "## this could possibly be a problem with class imbalancing, so let's try using class weights\n",
-    "\n",
-    "datagen = ImageDataGenerator(rescale = 1/255) ## resizing pixels ?\n",
+    "# previously we used the datagen.flow_from_directory function for ease of loading data for the model even though\n",
+    "# it is technically a data augmentation method; this may be outdated so let's try image_dataset_from_directory\n",
     " \n",
-    "train_data = datagen.flow_from_directory(\n",
-    "    r'C:\\Users\\lucia\\OneDrive - University of Calgary\\University\\Year 3\\Semester 2\\Bmen 415\\Coursework\\Course Project\\_FINAL DATASETS\\alzheimer mri preprocessed dataset\\train_test_val split\\train',\n",
-    "    target_size = (img_width, img_height),\n",
+    "train_data = tf.keras.utils.image_dataset_from_directory(\n",
+    "    r'C:\\Users\\lucia\\OneDrive - University of Calgary\\University\\Year 3\\Semester 2\\Bmen 415\\Coursework\\Course Project\\GitHub\\BMEN-415\\Data\\_split datasets\\image train_test_val split\\train',\n",
+    "    image_size = (img_width, img_height),\n",
     "    batch_size = batch_size,\n",
-    "    class_mode = 'categorical')\n",
+    "    labels='inferred',\n",
+    "    label_mode = 'categorical',\n",
+    "    class_names = ['Mild_Demented', 'Moderate_Demented', 'Non_Demented', 'Very_Mild_Demented'],\n",
+    "    seed = 112)\n",
     " \n",
-    "validation_data = datagen.flow_from_directory(\n",
-    "    r'C:\\Users\\lucia\\OneDrive - University of Calgary\\University\\Year 3\\Semester 2\\Bmen 415\\Coursework\\Course Project\\_FINAL DATASETS\\alzheimer mri preprocessed dataset\\train_test_val split\\val',\n",
-    "    target_size = (img_width, img_height),\n",
+    "validation_data = tf.keras.utils.image_dataset_from_directory(\n",
+    "    r'C:\\Users\\lucia\\OneDrive - University of Calgary\\University\\Year 3\\Semester 2\\Bmen 415\\Coursework\\Course Project\\GitHub\\BMEN-415\\Data\\_split datasets\\image train_test_val split\\val',\n",
+    "    image_size = (img_width, img_height),\n",
     "    batch_size = batch_size,\n",
-    "    class_mode = 'categorical')\n",
+    "    labels='inferred',\n",
+    "    label_mode = 'categorical',\n",
+    "    class_names = ['Mild_Demented', 'Moderate_Demented', 'Non_Demented', 'Very_Mild_Demented'],\n",
+    "    seed = 112)\n",
     " \n",
     "model.fit(\n",
     "    train_data,\n",
-    "    steps_per_epoch = 4479 // batch_size,\n",
-    "    epochs=epochs,\n",
+    "    steps_per_epoch = 4487 // (batch_size*epochs),\n",
+    "    epochs = epochs,\n",
     "    validation_data = validation_data,\n",
-    "    validation_steps = 642 // batch_size,\n",
-    "    class_weight = {0: 4479/627, 1: 4479/44, 2: 4479/2240, 3: 4479/1568}) ## these class weights are based on the train dataset (total train samples/train samples for class i)"
+    "    validation_steps = 642 // (batch_size*epochs))\n",
+    "\n",
+    "    ## NOTE: took out the class weights *for now* since the model accuracy seems to be higher without it\n",
+    "    ## class_weight = {0: 4487/627, 1: 4487/44, 2: 4487/2240, 3: 4487/1568}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,25 +140,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.25720322]]\n",
-      "Predicted Class:  0.25720322\n"
+      "1/1 [==============================] - 0s 81ms/step\n",
+      "[[0.3756     0.4137411  0.39648595 0.3891413 ]]\n"
      ]
     }
    ],
    "source": [
-    "from keras.models import load_model\n",
-    "from keras.preprocessing.image import load_img\n",
-    "from keras.preprocessing.image import img_to_array\n",
-    "from keras.applications.vgg16 import preprocess_input\n",
-    "from keras.applications.vgg16 import decode_predictions\n",
-    "from keras.applications.vgg16 import VGG16\n",
+    "from tensorflow.keras.models import load_model\n",
+    "from tensorflow.keras.preprocessing.image import load_img\n",
+    "from tensorflow.keras.preprocessing.image import img_to_array\n",
+    "from tensorflow.keras.applications.vgg16 import preprocess_input\n",
+    "from tensorflow.keras.applications.vgg16 import decode_predictions\n",
+    "from tensorflow.keras.applications.vgg16 import VGG16\n",
     "import numpy as np\n",
     " \n",
     "from keras.models import load_model\n",
@@ -165,16 +172,7 @@
     "\n",
     "prediction = model.predict(img)\n",
     "print(prediction)\n",
-    "print(\"Predicted Class: \", prediction[0][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## two issues visible here... accuracy is still at 0.75 constantly (so it is NOT a class imbalance problem?) and the predicted class is a decimal number, not a class..."
+    "## these are probabilities, i.e. the predicted class is 2 = moderate demented?"
    ]
   }
  ],
@@ -195,8 +193,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.8"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
