Adding R^2 to all models

--- a/Models/Regression_Models_Kayla.ipynb
+++ b/Models/Regression_Models_Kayla.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +16,13 @@
     "import pandas as pd  # Importing Pandas library\n",
     "import matplotlib.pyplot as plt  # Importing Matplotlib library's \"pyplot\" module\n",
     "import seaborn as sns  # Imorting Seaborn library\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix"
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "from sklearn.metrics import r2_score #importing r^2 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +45,9 @@
      "output_type": "stream",
      "text": [
       "Training MSE: 0.001139303274639288\n",
-      "Testing MSE: 0.0016530570878864588\n"
+      "Train R^2 Score:  0.5134601196061863\n",
+      "Testing MSE: 0.0016530570878864588\n",
+      "Test R^2 Score:  0.31423655023383135\n"
      ]
     },
     {
@@ -70,10 +73,14 @@
     "y_train_pred1 = rr.predict(X_train)\n",
     "y_test_pred1 = rr.predict(X_test)\n",
     "\n",
-    "#r1 = r1_score(y_test, y_test_pred1)\n",
+    "r2_test1 = r2_score(y_test, y_test_pred1)\n",
+    "r2_train1 = r2_score(y_train, y_train_pred1)\n",
+    "\n",
     "\n",
     "print('Training MSE:', mean_squared_error(y_train, y_train_pred1))\n",
+    "print(\"Train R^2 Score: \", r2_train1)\n",
     "print('Testing MSE:', mean_squared_error(y_test, y_test_pred1))\n",
+    "print(\"Test R^2 Score: \", r2_test1)\n",
     "\n",
     "fig = plt.figure()\n",
     "ax1 = fig.add_subplot(111)\n",
@@ -88,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +103,9 @@
      "output_type": "stream",
      "text": [
       "Training MSE: 2.8664702882607445e-07\n",
-      "Testing MSE: 0.002140250845944836\n"
+      "Train R^2 Score:  0.9998775872814335\n",
+      "Testing MSE: 0.002140250845944836\n",
+      "Test R^2 Score:  0.11212636621240402\n"
      ]
     },
     {
@@ -120,8 +129,13 @@
     "y_train_pred2 = xgb.predict(X_train)\n",
     "y_test_pred2 = xgb.predict(X_test)\n",
     "\n",
+    "r2_test2 = r2_score(y_test, y_test_pred2)\n",
+    "r2_train2 = r2_score(y_train, y_train_pred2)\n",
+    "\n",
     "print('Training MSE:', mean_squared_error(y_train, y_train_pred2))\n",
+    "print(\"Train R^2 Score: \", r2_train2)\n",
     "print('Testing MSE:', mean_squared_error(y_test, y_test_pred2))\n",
+    "print(\"Test R^2 Score: \", r2_test2)\n",
     "\n",
     "fig = plt.figure()\n",
     "ax1 = fig.add_subplot(111)\n",
@@ -136,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +166,9 @@
      "output_type": "stream",
      "text": [
       "Training MSE: 0.0013035437923333297\n",
-      "Testing MSE: 0.0020100393660455428\n"
+      "Train R^2 Score:  0.443321146416649\n",
+      "Testing MSE: 0.0020100393660455428\n",
+      "Test R^2 Score:  0.16614402495464742\n"
      ]
     },
     {
@@ -176,8 +192,13 @@
     "y_train_pred3 = gbr.predict(X_train)\n",
     "y_test_pred3 = gbr.predict(X_test)\n",
     "\n",
+    "r2_test3 = r2_score(y_test, y_test_pred3)\n",
+    "r2_train3 = r2_score(y_train, y_train_pred3)\n",
+    "\n",
     "print('Training MSE:', mean_squared_error(y_train, y_train_pred3))\n",
+    "print(\"Train R^2 Score: \", r2_train3)\n",
     "print('Testing MSE:', mean_squared_error(y_test, y_test_pred3))\n",
+    "print(\"Test R^2 Score: \", r2_test3)\n",
     "\n",
     "fig = plt.figure()\n",
     "ax1 = fig.add_subplot(111)\n",
