trying to fix accuracy errors

--- a/Models/image_classification_model.ipynb
+++ b/Models/image_classification_model.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense\n",
-    "from tensorflow.keras.models import Sequential\n",
+    "import keras\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Conv2D, MaxPooling2D\n",
+    "from keras.layers import Activation, Dropout, Flatten, Dense\n",
     "from keras import backend as K\n",
     " \n",
     "img_width, img_height = 128, 128\n",
@@ -21,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +44,7 @@
     "model.add(Dense(64))\n",
     "model.add(Activation('relu'))\n",
     "model.add(Dropout(0.5))\n",
-    "model.add(Dense(4)) ## 4 output classes\n",
+    "model.add(Dense(1))\n",
     "model.add(Activation('sigmoid'))\n",
     "\n",
     "model.compile(loss = 'binary_crossentropy',\n",
@@ -52,86 +54,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 4487 files belonging to 4 classes.\n",
-      "Found 642 files belonging to 4 classes.\n",
-      "Epoch 1/10\n",
-      "28/28 [==============================] - 4s 121ms/step - loss: 0.4731 - accuracy: 0.5357 - val_loss: 0.4333 - val_accuracy: 0.5469\n",
-      "Epoch 2/10\n",
-      "28/28 [==============================] - 3s 121ms/step - loss: 0.4623 - accuracy: 0.4799 - val_loss: 0.4294 - val_accuracy: 0.5312\n",
-      "Epoch 3/10\n",
-      "28/28 [==============================] - 3s 124ms/step - loss: 0.4610 - accuracy: 0.5134 - val_loss: 0.4399 - val_accuracy: 0.4688\n",
-      "Epoch 4/10\n",
-      "28/28 [==============================] - 3s 123ms/step - loss: 0.4430 - accuracy: 0.5424 - val_loss: 0.4510 - val_accuracy: 0.5156\n",
-      "Epoch 5/10\n",
-      "28/28 [==============================] - 3s 122ms/step - loss: 0.4694 - accuracy: 0.5312 - val_loss: 0.4412 - val_accuracy: 0.5000\n",
-      "Epoch 6/10\n",
-      "28/28 [==============================] - 3s 124ms/step - loss: 0.4404 - accuracy: 0.5603 - val_loss: 0.4437 - val_accuracy: 0.5000\n",
-      "Epoch 7/10\n",
-      "28/28 [==============================] - 3s 124ms/step - loss: 0.4498 - accuracy: 0.5223 - val_loss: 0.4046 - val_accuracy: 0.5312\n",
-      "Epoch 8/10\n",
-      "28/28 [==============================] - 8s 293ms/step - loss: 0.4462 - accuracy: 0.5379 - val_loss: 0.3794 - val_accuracy: 0.6094\n",
-      "Epoch 9/10\n",
-      "28/28 [==============================] - 4s 133ms/step - loss: 0.4266 - accuracy: 0.5312 - val_loss: 0.4109 - val_accuracy: 0.5781\n",
-      "Epoch 10/10\n",
-      "28/28 [==============================] - 4s 134ms/step - loss: 0.4459 - accuracy: 0.5536 - val_loss: 0.4310 - val_accuracy: 0.4531\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] The system cannot find the path specified: 'C:\\\\Users\\\\lucia\\\\OneDrive - University of Calgary\\\\University\\\\Year 3\\\\Semester 2\\\\Bmen 415\\\\Coursework\\\\Course Project\\\\_FINAL DATASETS\\\\alzheimer mri preprocessed dataset\\\\train_test_val split\\\\train'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-9b6232ae82e1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mdatagen\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mImageDataGenerator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrescale\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m255\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m## resizing pixels ?\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m train_data = datagen.flow_from_directory(\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[1;34mr'C:\\Users\\lucia\\OneDrive - University of Calgary\\University\\Year 3\\Semester 2\\Bmen 415\\Coursework\\Course Project\\_FINAL DATASETS\\alzheimer mri preprocessed dataset\\train_test_val split\\train'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mtarget_size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mimg_width\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimg_height\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\14037\\anaconda3\\lib\\site-packages\\keras\\preprocessing\\image.py\u001b[0m in \u001b[0;36mflow_from_directory\u001b[1;34m(self, directory, target_size, color_mode, classes, class_mode, batch_size, shuffle, seed, save_to_dir, save_prefix, save_format, follow_links, subset, interpolation, keep_aspect_ratio)\u001b[0m\n\u001b[0;32m   1646\u001b[0m                 \u001b[1;32mand\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0my\u001b[0m\u001b[0;31m`\u001b[0m \u001b[1;32mis\u001b[0m \u001b[0ma\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0marray\u001b[0m \u001b[0mof\u001b[0m \u001b[0mcorresponding\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1647\u001b[0m         \"\"\"\n\u001b[1;32m-> 1648\u001b[1;33m         return DirectoryIterator(\n\u001b[0m\u001b[0;32m   1649\u001b[0m             \u001b[0mdirectory\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1650\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\14037\\anaconda3\\lib\\site-packages\\keras\\preprocessing\\image.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, directory, image_data_generator, target_size, color_mode, classes, class_mode, batch_size, shuffle, seed, data_format, save_to_dir, save_prefix, save_format, follow_links, subset, interpolation, keep_aspect_ratio, dtype)\u001b[0m\n\u001b[0;32m    561\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mclasses\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    562\u001b[0m             \u001b[0mclasses\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 563\u001b[1;33m             \u001b[1;32mfor\u001b[0m \u001b[0msubdir\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msorted\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    564\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msubdir\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    565\u001b[0m                     \u001b[0mclasses\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msubdir\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: 'C:\\\\Users\\\\lucia\\\\OneDrive - University of Calgary\\\\University\\\\Year 3\\\\Semester 2\\\\Bmen 415\\\\Coursework\\\\Course Project\\\\_FINAL DATASETS\\\\alzheimer mri preprocessed dataset\\\\train_test_val split\\\\train'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x1d66c203280>"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# previously we used the datagen.flow_from_directory function for ease of loading data for the model even though\n",
-    "# it is technically a data augmentation method; this may be outdated so let's try image_dataset_from_directory\n",
+    "## clearly there were some problems with the last iteration of the model since accuracy started at 75% and remained the same....\n",
+    "## this could possibly be a problem with class imbalancing, so let's try using class weights\n",
+    "\n",
+    "datagen = ImageDataGenerator(rescale = 1/255) ## resizing pixels ?\n",
     " \n",
-    "train_data = tf.keras.utils.image_dataset_from_directory(\n",
-    "    r'C:\\Users\\lucia\\OneDrive - University of Calgary\\University\\Year 3\\Semester 2\\Bmen 415\\Coursework\\Course Project\\GitHub\\BMEN-415\\Data\\_split datasets\\image train_test_val split\\train',\n",
-    "    image_size = (img_width, img_height),\n",
+    "train_data = datagen.flow_from_directory(\n",
+    "    r'C:\\Users\\lucia\\OneDrive - University of Calgary\\University\\Year 3\\Semester 2\\Bmen 415\\Coursework\\Course Project\\_FINAL DATASETS\\alzheimer mri preprocessed dataset\\train_test_val split\\train',\n",
+    "    target_size = (img_width, img_height),\n",
     "    batch_size = batch_size,\n",
-    "    labels='inferred',\n",
-    "    label_mode = 'categorical',\n",
-    "    class_names = ['Mild_Demented', 'Moderate_Demented', 'Non_Demented', 'Very_Mild_Demented'],\n",
-    "    seed = 112)\n",
+    "    class_mode = 'categorical')\n",
     " \n",
-    "validation_data = tf.keras.utils.image_dataset_from_directory(\n",
-    "    r'C:\\Users\\lucia\\OneDrive - University of Calgary\\University\\Year 3\\Semester 2\\Bmen 415\\Coursework\\Course Project\\GitHub\\BMEN-415\\Data\\_split datasets\\image train_test_val split\\val',\n",
-    "    image_size = (img_width, img_height),\n",
+    "validation_data = datagen.flow_from_directory(\n",
+    "    r'C:\\Users\\lucia\\OneDrive - University of Calgary\\University\\Year 3\\Semester 2\\Bmen 415\\Coursework\\Course Project\\_FINAL DATASETS\\alzheimer mri preprocessed dataset\\train_test_val split\\val',\n",
+    "    target_size = (img_width, img_height),\n",
     "    batch_size = batch_size,\n",
-    "    labels='inferred',\n",
-    "    label_mode = 'categorical',\n",
-    "    class_names = ['Mild_Demented', 'Moderate_Demented', 'Non_Demented', 'Very_Mild_Demented'],\n",
-    "    seed = 112)\n",
+    "    class_mode = 'categorical')\n",
     " \n",
     "model.fit(\n",
     "    train_data,\n",
-    "    steps_per_epoch = 4487 // (batch_size*epochs),\n",
-    "    epochs = epochs,\n",
+    "    steps_per_epoch = 4479 // batch_size,\n",
+    "    epochs=epochs,\n",
     "    validation_data = validation_data,\n",
-    "    validation_steps = 642 // (batch_size*epochs))\n",
-    "\n",
-    "    ## NOTE: took out the class weights *for now* since the model accuracy seems to be higher without it\n",
-    "    ## class_weight = {0: 4487/627, 1: 4487/44, 2: 4487/2240, 3: 4487/1568}"
+    "    validation_steps = 642 // batch_size,\n",
+    "    class_weight = {0: 4479/627, 1: 4479/44, 2: 4479/2240, 3: 4479/1568}) ## these class weights are based on the train dataset (total train samples/train samples for class i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,25 +109,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 81ms/step\n",
-      "[[0.3756     0.4137411  0.39648595 0.3891413 ]]\n"
+      "[[0.25720322]]\n",
+      "Predicted Class:  0.25720322\n"
      ]
     }
    ],
    "source": [
-    "from tensorflow.keras.models import load_model\n",
-    "from tensorflow.keras.preprocessing.image import load_img\n",
-    "from tensorflow.keras.preprocessing.image import img_to_array\n",
-    "from tensorflow.keras.applications.vgg16 import preprocess_input\n",
-    "from tensorflow.keras.applications.vgg16 import decode_predictions\n",
-    "from tensorflow.keras.applications.vgg16 import VGG16\n",
+    "from keras.models import load_model\n",
+    "from keras.preprocessing.image import load_img\n",
+    "from keras.preprocessing.image import img_to_array\n",
+    "from keras.applications.vgg16 import preprocess_input\n",
+    "from keras.applications.vgg16 import decode_predictions\n",
+    "from keras.applications.vgg16 import VGG16\n",
     "import numpy as np\n",
     " \n",
     "from keras.models import load_model\n",
@@ -172,7 +141,16 @@
     "\n",
     "prediction = model.predict(img)\n",
     "print(prediction)\n",
-    "## these are probabilities, i.e. the predicted class is 2 = moderate demented?"
+    "print(\"Predicted Class: \", prediction[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## two issues visible here... accuracy is still at 0.75 constantly (so it is NOT a class imbalance problem?) and the predicted class is a decimal number, not a class..."
    ]
   }
  ],
@@ -192,8 +170,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
-  }
+   "version": "3.8.3"
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
